--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ num-traits = "0.2"
 crossbeam-channel = "0.4"
 tokio = { version = "0.2", features = ["full"] }
 primal-tokio = "0.1"
+futures-core = "0.3"
 
 # primal = "0.2"
 # pool = "0.1"
