--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "rsa-solver"
 version = "0.1.0"
 authors = ["solomonu"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Uses various attacks against RSA to efficiently brute-force m from c, e, and n."
+categories = ["algorithms", "concurrency", "cryptography"]
+tags = ["rsa"]
+license = "CC0-1.0"
+readme = "README.md"
 
 [dependencies]
 num-integer = "0.1"
