--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ categories = ["algorithms", "concurrency", "cryptography"]
 tags = ["rsa"]
 license = "CC0-1.0"
 readme = "README.md"
+repository = "https://github.com/sollyucko/rsa-solver"
 
 [dependencies]
 num-integer = "0.1"
